refactor: remove dead code and optimize service layer transactions